--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
   "name": "party-game",
-  "version": "0.1.0",
-  "description": "",
-  "main": "server/src",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
-    "polka": "^0.5.1",
-    "serve-static": "^1.13.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "ava /server/test/**/*.test.js"
-  },
+  "version": "1.0.0",
+  "description": "byod party game",
+  "main": "server/index.js",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fatlard1993/party-game.git"
   },
-  "author": "",
+  "author": "fatlard1993",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fatlard1993/party-game/issues"
   },
-  "homepage": "https://github.com/fatlard1993/party-game#readme"
+	"homepage": "https://github.com/fatlard1993/party-game#readme",
+	"eslintConfig": {
+		"extends": "rules"
+	},
+	"devDependencies": {
+		"eslint-config-rules": "github:fatlard1993/eslint-config-rules#2.x.x",
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.16.0"
+	},
+  "dependencies": {
+		"config-manager": "github:fatlard1993/config-manager#2.x.x",
+		"dialog": "github:fatlard1993/dialog#2.x.x",
+		"dom": "github:fatlard1993/dom#2.x.x",
+		"find-root": "^1.1.0",
+		"fs-extended": "github:fatlard1993/fs-extended#2.x.x",
+		"http-server": "github:fatlard1993/http-server#3.x.x",
+		"js-util": "github:fatlard1993/js-util#2.x.x",
+		"log": "github:fatlard1993/log#2.x.x",
+		"menu": "github:fatlard1993/menu#2.x.x",
+		"notify": "github:fatlard1993/notify#2.x.x",
+		"performance-now": "^2.1.0",
+		"socket-client": "github:fatlard1993/socket-client#2.x.x",
+		"websocket-server": "github:fatlard1993/websocket-server#2.x.x",
+		"yargs": "^13.2.4"
+  }
 }
